# afrotc-native-ios

./: .env.production.template  .gitignore  .vercelignore  AFROTC UP Retention - 2026.xlsx  AFROTC_695_Comprehensive_Presentation.pptx  AFROTC_695_Recruitment_System_Presentation.pptx  BACKUP.md  BACKUP_SCHEDULER_README.md  BACKUP_SYSTEM_AUDIT.md  COMPREHENSIVE_TESTING_PLAN.md  Jesuit and Catholic High Schools in Seattle and Portland.docx  LOCAL_DEVELOPMENT.md  NEON_BACKUP_SCHEDULER_README.md  README.md  VERCEL_DEPLOYMENT_GUIDE.md  app.py  app_local.py  backup_to_blob.py  check_2fa_columns.py  check_calendar_events.py  check_contacts.py  check_database_tables.py  check_db.py  check_production_db.py  check_recruits.py  check_schema_diff.py  check_tables.py  check_user_schema.py  comprehensive_schema_analysis.py  comprehensive_test.py  coverage_runner.py  create_admin_user.py  create_comprehensive_calendar.py  create_comprehensive_recruits.py  create_test_data.py  debug_2fa_routes.py  debug_contacts.py  download_usaf_images.py  env.example  final_migration.py  (+57 more)
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  bootstrap.py  main.py
backend/scripts/: export_openapi.py  migrate_from_neon.py  migrate_materials.py  migrate_materials_from_r2.py  seed_demo.py
backend/tests/: conftest.py  test_admin.py  test_analytics.py  test_auth.py  test_cadets.py  test_contacts.py  test_events.py  test_exports.py  test_followups.py  test_health.py  test_imports.py  test_materials.py  test_password_reset.py  (+3 more)
(+221 files in other folders)
