[project]
name = "afrotc695-backend"
version = "0.1.0"
description = "AFROTC Detachment 695 recruitment management — headless FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "python-multipart>=0.0.17",
    "pyotp>=2.9",
    "cryptography>=44.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "reportlab>=4.2",
    "email-validator>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
# Alembic writes generated migration files; don't lint their style.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI relies on function calls (Depends/Query) in argument defaults —
# that's the framework's intended DI pattern, not a bug.
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
